frontend/test/should_fail/exec_008.grg
using deep_model_001;

rule r(y : Acc) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    delete(b);
    exec(r(a)); // a may be deleted (hom)
  }
}
